# LLaMA_CEAK

./: .gitignore  README.md  continuous_train.py  datasets.py  eval.py  kfold_train.py  model.py  pyproject.toml  test_dataloader.py  train.py  train_70B.py
llamaceak/: __init__.py  datasets.py  eval.py  model.py  train.py
scripts/: continuous_train.py  eval_llama.py  kfold_train.py  train_70B.py  train_fewlayer.py
utils/: subdata.py  test_dataloader.py
